Change name to Strong Together .. not cheesy at all ..

--- a/resources/assets/less/semantic/semantic.less
+++ b/resources/assets/less/semantic/semantic.less
@@ -1,14 +1,22 @@
 /*
-
-██╗   ██╗███████╗██╗   ██╗    ███████╗██████╗  █████╗ ██████╗ ██╗  ██╗
-██║   ██║██╔════╝██║   ██║    ██╔════╝██╔══██╗██╔══██╗██╔══██╗██║ ██╔╝
-██║   ██║█████╗  ██║   ██║    ███████╗██████╔╝███████║██████╔╝█████╔╝
-╚██╗ ██╔╝██╔══╝  ██║   ██║    ╚════██║██╔═══╝ ██╔══██║██╔══██╗██╔═██╗
- ╚████╔╝ ███████╗╚██████╔╝    ███████║██║     ██║  ██║██║  ██║██║  ██╗
-  ╚═══╝  ╚══════╝ ╚═════╝     ╚══════╝╚═╝     ╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝
-
-  Import this file into your LESS project to use Semantic UI without build tools
-*/
+|
+|    ███████╗████████╗██████╗  ██████╗ ███╗   ██╗ ██████╗
+|    ██╔════╝╚══██╔══╝██╔══██╗██╔═══██╗████╗  ██║██╔════╝
+|    ███████╗   ██║   ██████╔╝██║   ██║██╔██╗ ██║██║  ███╗
+|    ╚════██║   ██║   ██╔══██╗██║   ██║██║╚██╗██║██║   ██║
+|    ███████║   ██║   ██║  ██║╚██████╔╝██║ ╚████║╚██████╔╝
+|    ╚══════╝   ╚═╝   ╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═══╝ ╚═════╝
+|
+|    ████████╗ ██████╗  ██████╗ ███████╗████████╗██╗  ██╗███████╗██████╗
+|    ╚══██╔══╝██╔═══██╗██╔════╝ ██╔════╝╚══██╔══╝██║  ██║██╔════╝██╔══██╗
+|       ██║   ██║   ██║██║  ███╗█████╗     ██║   ███████║█████╗  ██████╔╝
+|       ██║   ██║   ██║██║   ██║██╔══╝     ██║   ██╔══██║██╔══╝  ██╔══██╗
+|       ██║   ╚██████╔╝╚██████╔╝███████╗   ██║   ██║  ██║███████╗██║  ██║
+|       ╚═╝    ╚═════╝  ╚═════╝ ╚══════╝   ╚═╝   ╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝
+|
+| Import this file into your LESS project to use Semantic UI without build tools
+|
+└ */
 
 /* Global */
 & { @import "node_modules/semantic-ui-less/definitions/globals/reset"; }
