Adding logo, changing ascii-logo, complete index page etc

--- a/resources/assets/less/partials/variables.less
+++ b/resources/assets/less/partials/variables.less
@@ -1,5 +1,5 @@
 // Body
-@body-bg: #f5f8fa;
+@body-bg: #F7F7F7;
 
 // Brands
 @brand-primary: #3097D1;
@@ -7,9 +7,13 @@
 @brand-success: #4eb76e;
 @brand-warning: #cbb956;
 @brand-danger:  #bf5329;
+@golden-color:#D4AF37;
 
 // Typography
-@text-color: #636b6f;
+@text-color: #363636;
+@text-color-lite: #9E9E9e;
+@text-color-dark: #8A8A8A;
+
 @font-family: 'Roboto', sans-serif;
 @font-size: 13px;
 @font-weight-ultra-thin: 100;
