--- a/resources/assets/less/partials/shared.less
+++ b/resources/assets/less/partials/shared.less
@@ -1,158 +1,162 @@
-*, *:before, *:after {
-    box-sizing: border-box;
-    outline: none;
-}
-
 body, html {
-    overflow: hidden;
     font-family: @font-family;
     font-size: @font-size;
     font-weight: @font-weight-thin;
     background-color: @body-bg;
-    color: @text-color;
     font-weight: @font-weight-thin;
 }
 
-
-
-
-/* document styles */
 body, h1, h2, h3, h4, h5, div, p, span, code {
   font-family: 'Roboto', sans-serif;
+  color: @text-color;
 }
 
-label, body,
-.ui.divider
-.ui.form input,
-.ui.selection.dropdown
-.ui.input input:focus::-webkit-input-placeholder,
-.ui.input.focus input::-webkit-input-placeholder {
-  color:#7f8c8d!important;
-  font-weight:300;
+h2.subtitle {
+  color: @text-color-lite;
 }
 
-body {
-  background: #7f8c8d;
-  font-size: 1.3rem;
+i.circular.icon {
+  background-color: @body-bg;
+  color: @text-color-lite;
+  box-shadow: none!important;
 }
 
-.pusher {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-  background: #ecf0f1;
+.ui.page.grid.segment {
+  padding-top: 12em;
+  padding-bottom: 26em;
 }
 
-.hero {
-  overflow: hidden;
-  color: #ffffff;
-  padding-bottom: 1rem;
-  padding-top: 1rem;
-  margin-bottom: 1rem;
+.hidden.menu {
+  display: none;
 }
 
-img.logo {
-  width:120px;
-  float:left;
+.masthead.segment {
+  min-height: 330px;
+  padding: 1em 0em;
+
 }
 
-table.center {
-  margin-left:auto;
-  margin-right:auto;
+.masthead.segment,
+.footer.segment {
+  background: @body-bg!important;
 }
 
-table.center td {
-  text-align: center;
+.footer.segment {
+    padding: 2em 0em!important;
+    font-size:16px;
 }
 
-.container {
-  max-width: 64em;
-  margin-left: auto;
-  margin-right: auto;
+.masthead img.logo {
+  width:24px;
+  vertical-align: inherit;
 }
 
-.ui.container .buttons {
-  display: inline;
-  padding-bottom: 20px;
+.masthead .ui.menu .ui.button {
+  margin-left: 0.5em;
+}
+.masthead h1.ui.header {
+  margin-top: 0.5em;
+  margin-bottom: 0em;
+  font-size: 4em;
+  font-weight: normal;
+}
+.masthead h2 {
+  font-size: 1.7em;
+  font-weight: normal;
 }
 
-/* content styles */
-.title-l{
-  font-size:4rem;
+.ui.vertical.stripe {
+  padding: 8em 0em;
+}
+.ui.vertical.stripe h3 {
+  font-size: 2em;
+}
+.ui.vertical.stripe .button + h3,
+.ui.vertical.stripe p + h3 {
+  margin-top: 3em;
+}
+.ui.vertical.stripe .floated.image {
+  clear: both;
+}
+.ui.vertical.stripe p {
+  font-size: 1.33em;
+}
+.ui.vertical.stripe .horizontal.divider {
+  margin: 3em 0em;
 }
 
-.title-m {
-  font-size:3rem;
+.quote.stripe.segment {
+  padding: 0em;
+}
+.quote.stripe.segment .grid .column {
+  padding-top: 5em;
+  padding-bottom: 5em;
 }
 
-.text-m {
-  font-size: 1.5rem;
+.footer.segment {
+  padding: 5em 0em;
 }
 
-.text-l {
-  font-size: 1.7rem;
+.secondary.main.menu .toc.item {
+  display: none;
 }
 
-/* text selection */
-::selection {
-  background-color: #e8e8e8 !important;
-}
+@media only screen and (max-width: 700px) {
+  .ui.fixed.menu {
+    display: none !important;
+  }
+  .secondary.main.menu .item,
+  .secondary.main.menu .menu {
+    display: none;
+  }
+  .secondary.main.menu .toc.item {
+    display: block;
+  }
+  .masthead.segment {
+    min-height: 220px;
+    border-bottom: none;
+  }
 
-::-moz-selection {
-  background-color: #e8e8e8 !important;
-}
+  .masthead h1.ui.header {
+    font-size: 1.4em;
+    margin-top: 0.5em;
+  }
+  .masthead h2 {
+    margin-top: 0.5em;
+    font-size: 1.2em;
+  }
 
-/* footer styles */
-.ui.footer {
-  padding-bottom: 2rem;
-  background-color: #ecf0f1;
+  .ui.vertical.stripe p {
+    font-size: 1.1em;
+  }
 }
-
-.footer img {
-  vertical-align: middle;
-}
-
-.footer h4 a {
-  font-size: 1.3rem;
-  color:#7f8c8d;
-}
-
-.footer h4 a:hover {
-  color:#788687;
-}
-
-.footer .tentacle {
-  vertical-align: baseline;
-}
-
-/* button */
 .ui.bragit.button,
-.ui.bragit.buttons .button {
-    background-color: #606b6c;
-    color: #fff!important;
-}
+   .ui.bragit.buttons .button {
+       background-color: #9e9e9e;
+       color: #fff!important;
+   }
 
-.ui.bragit.label {
-    color: #606b6c!important;
-    border-color: #606b6c!important;
-    background-color: #ffffff;
-}
+   .ui.bragit.label {
+       color: #9e9e9e!important;
+       border-color: #9e9e9e!important;
+       background-color: #ffffff;
+   }
 
-.ui.bragit.button:focus,
-.ui.bragit.buttons .button:focus,
-.ui.bragit.button:hover,
-.ui.bragit.buttons .button:hover {
-    background-color: #485051;
-}
+   .ui.bragit.button:focus,
+   .ui.bragit.buttons .button:focus,
+   .ui.bragit.button:hover,
+   .ui.bragit.buttons .button:hover {
+       background-color: #848484;
+   }
 
-.ui.bragit.labels .label:focus,
-.ui.bragit.label:focus,
-.ui.bragit.labels .label:hover,
-.ui.bragit.label:hover {
-    color: #485051!important;
-    border-color: #485051!important;
-}
+   .ui.bragit.labels .label:focus,
+   .ui.bragit.label:focus,
+   .ui.bragit.labels .label:hover,
+   .ui.bragit.label:hover {
+       color: #848484!important;
+       border-color: #848484!important;
+   }
 
-.ui.labeled .ui.button .star.icon {
-    color: #F5CC7A!important;
-}
+   .ui.labeled .ui.button .star.icon {
+       color: #F5CC7A!important;
+   }
