--- a/resources/assets/views/index.html
+++ b/resources/assets/views/index.html
@@ -1,96 +1,126 @@
-<!DOCTYPE html>
-<html lang="en" unselectable>
-  <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="msapplication-tap-highlight" content="no">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Vue Spark Starter Application</title>
-      <link href="/css/vendors.css" rel="stylesheet">
-      <link href="/css/app.css" rel="stylesheet">
-      <!--[if lt IE 9]>
-          <script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-          <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-      <![endif]-->
-  </head>
 
-  <body class="stretched">
-     <section class="hero">
-      <div class="ui container">
-        <div class="ui grid">
-          <div class="two wide column">
-            <img class="logo" src="img/logo.svg"/>
-          </div>
-          <div class="fourteen wide column">
-            <h1 class="title-m">Audiz
-              <div class="buttons">
-                <a class="ui labeled tiny button github-websemantics-audiz-stars">
-                  <div class="ui bragit tiny button">
-                    <i class="star icon"></i> Stars
-                  </div>
-                  <div class="ui basic bragit left pointing label">
-                    <i class="spinner loading icon"></i>
-                  </div>
-                </a>
-                <a class="ui left labeled tiny button github-websemantics-audiz-forks">
-                  <div class="ui basic bragit right pointing label">
-                    <i class="spinner loading icon"></i>
-                  </div>
-                  <div class="ui bragit tiny button">
-                    <i class="fork icon"></i> Forks
-                  </div>
-                </a>
-                <a class="ui labeled tiny button github-websemantics-audiz-watchers">
-                  <div class="ui bragit tiny button">
-                    <i class="eye icon"></i> Watchers
-                  </div>
-                  <div class="ui basic bragit left pointing label">
-                    <i class="spinner loading icon"></i>
-                  </div>
-                </a>
-                <a class="ui left labeled tiny button github-websemantics-audiz-issues">
-                  <div class="ui basic bragit right pointing label">
-                    <i class="spinner loading icon"></i>
-                  </div>
-                  <div class="ui bragit tiny button">
-                    <i class="info circle icon"></i> Issues
-                  </div>
-                </a>
-                <a class="ui bragit tiny button github-websemantics-audiz-github">
-                    <i class="github icon"></i> Github
-                </a>
-              </div></h1>
-            <p class="text-l">Turns sound files into delightful videos to share on all social networks.</p>
-          </div>
-        </div>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+  <title>Vue Spark Starter Application</title>
+  <link href="/css/vendors.css" rel="stylesheet">
+  <link href="/css/app.css" rel="stylesheet">
+</head>
+<body>
+
+<!-- Following Menu -->
+<div class="ui large top fixed hidden menu">
+  <div class="ui container">
+    <a class="active item">Home</a>
+    <a class="item">Contact Us</a>
+    <div class="right menu">
+      <div class="item">
+        <a class="ui button">Log in</a>
       </div>
-    </section>
-    <div class="pusher">
-      <div class="ui container">
-        <br/>
-        <audio id="audioElement" src="./audio/Odesza - Above The Middle.mp3"></audio>
-        <div>
-          <button class="ui button" onclick="document.getElementById('audioElement').play()">Play the Audio</button>
-          <button class="ui button" onclick="document.getElementById('audioElement').pause()">Pause the Audio</button>
-          <button class="ui button" onclick="document.getElementById('audioElement').volume+=0.1">Increase Volume</button>
-          <button class="ui button" onclick="document.getElementById('audioElement').volume-=0.1">Decrease Volume</button>
-        </div>
-        <div id="audio"> </div>
+      <div class="item">
+        <a class="ui primary button">Sign Up</a>
       </div>
     </div>
-    <div class="ui footer">
-      <div class="ui container">
-        <table class="center">
-          <tr>
-            <td>
-              Built with <img data-preserve-html-node="true" src="img/heart.svg" alt="love" style="width:22px;height:22px;"> by &nbsp;<br/>
-              <h4><a href="http://websemantics.ca">Web Semantics, Inc.</a></h4>
-            </td>
-          </tr>
-        </table>
+  </div>
+</div>
+
+<!-- Sidebar Menu -->
+<div class="ui vertical sidebar menu">
+  <a class="active item">Home</a>
+  <a class="item">Contact Us</a>
+  <a class="item">Login</a>
+  <a class="item">Signup</a>
+</div>
+
+<!-- Page Contents -->
+<div class="pusher">
+  <div class="ui vertical masthead center aligned basic segment">
+    <div class="ui container">
+      <div class="ui large secondary main menu">
+        <a class="toc item">
+          <i class="sidebar icon"></i>
+        </a>
+        <a class="active item">Home</a>
+        <a class="item">Contact Us</a>
+        <div class="right item">
+          <a class="ui button">Log in</a>
+          <a class="ui primary button">Sign Up</a>
+        </div>
       </div>
-  	</div>
-    <div id="app"></div>
-    <script src="/js/app.js"></script>
-  </body>
+    </div>
+    <div class="ui text container">
+      <h1 class="ui header title">
+        STRONG <img class="logo" src="img/logo.svg"/> TOGETHER
+      </h1>
+      <div class="p-t-lg p-b-sm">
+        <!-- Bragit : http://websemantics.github.io/bragit/ -->
+        <a class="ui labeled button github-websemantics-strong-together-stars">
+            <div class="ui bragit button"> <i class="star icon"></i> Stars </div>
+            <div class="ui basic bragit left pointing label"> <i class="spinner loading icon"></i> </div>
+        </a>&nbsp;&nbsp;&nbsp;
+        <a class="ui bragit button github-websemantics-strong-together-download"> <i class="download icon"></i> Download </a>&nbsp;&nbsp;&nbsp;
+        <a class="ui bragit button github-websemantics-strong-together-github"> <i class="github icon"></i> Github </a>
+      </div>
+      <h2 class="subtitle">Do whatever you want when you want to.</h2>
+    </div>
+  </div>
+
+  <div class="ui page grid basic segment">
+    <div class="sixteen wide column">
+      <div class="ui three column center aligned stackable divided grid">
+        <div class="ui vertical stripe column">
+          <h2 class="ui icon header">
+            <i class="circular eye icon"></i>
+            Vue.js
+          </h2>
+          <p>Reactive Components for Modern Web Interfaces.</p>
+        </div>
+        <div class="ui vertical stripe column">
+          <h2 class="ui icon header">
+            <i class="circular paint brush icon"></i>
+            Semantic-ui
+          </h2>
+          <p>User Interface is the language of the web.</p>
+        </div>
+        <div class="ui vertical stripe column">
+          <h2 class="ui icon header">
+            <i class="circular lightning icon"></i>
+            Spark
+          </h2>
+          <p>Forget all the boilerplate and start your next big idea.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="ui vertical footer basic segment">
+    <div class="ui container">
+      <div class="ui stackable equal height stackable grid">
+        <div class="twelve wide column">
+          Built with <i class="red heart icon"></i> by © Your company.
+        </div>
+        <div class="four wide column">
+          <button class="ui icon button">
+            <i class="facebook icon"></i>
+          </button>
+          <button class="ui icon button">
+            <i class="twitter icon"></i>
+          </button>
+          <button class="ui icon button">
+            <i class="github icon"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div id="app"></div>
+<script src="/js/all.js"></script>
+<script src="/js/app.js"></script>
+</body>
 </html>
