--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -18,6 +18,15 @@ h2.subtitle {
   color: @text-color-lite;
 }
 
+h2.ui.header {
+  font-size: xx-large;
+  margin-bottom: 3rem!important;
+}
+
+.ui.container {
+  font-size: large;
+}
+
 i.circular.icon {
   background-color: @body-bg;
   color: @text-color-lite;
@@ -57,7 +66,7 @@ i.circular.icon {
 }
 .masthead h1.ui.header {
   margin-top: 0.5em;
-  margin-bottom: 0em;
+  margin-bottom: 0.3em;
   font-size: 4em;
   font-weight: normal;
 }
