--- a/resources/assets/views/index.html
+++ b/resources/assets/views/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-    <title>Strong-Together Starter Application</title>
+    <title>Strong-Together Starter Application, by Web Semantics, Inc.</title>
     <link href="/css/vendors.css" rel="stylesheet">
     <link href="/css/app.css" rel="stylesheet">
   </head>
