--- a/resources/assets/views/index.html
+++ b/resources/assets/views/index.html
@@ -7,12 +7,12 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <title>Strong-Together Starter Application, by Web Semantics, Inc.</title>
-    <link href="/css/vendors.css" rel="stylesheet">
-    <link href="/css/app.css" rel="stylesheet">
+    <link href="css/vendors.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet">
   </head>
   <body class="pushable">
     <div id="app"></div>
-    <script src="/js/all.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="js/all.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
